解决缩放比例导致标签漂移问题。 新增底部按钮、快捷键控制配置与显示开关功能。 其他优化。 Fix the issue of label drift caused by scaling. Add TAB buttons, shortcut key control configuration, and display toggle functionality. Other optimizations.

--- a/Maiya Labeler 麦丫标签机/Languages/ChineseSimplified/Keyed/MaiyaLabeler_Keys.xml
+++ b/Maiya Labeler 麦丫标签机/Languages/ChineseSimplified/Keyed/MaiyaLabeler_Keys.xml
@@ -43,4 +43,10 @@
 
 	<MaiyaLabeler_ConfigCustomDesc>自定义描述 (AI 上下文):</MaiyaLabeler_ConfigCustomDesc>
 	<MaiyaLabeler_DescPrefix>备注</MaiyaLabeler_DescPrefix>
+
+	<MaiyaLabeler_ShowMainTab>显示底部菜单按钮</MaiyaLabeler_ShowMainTab>
+
+	<MaiyaLabeler_Status_Toggle>麦丫标签机: {0}</MaiyaLabeler_Status_Toggle>
+	<MaiyaLabeler_Status_On>已开启</MaiyaLabeler_Status_On>
+	<MaiyaLabeler_Status_Off>已关闭</MaiyaLabeler_Status_Off>
 </LanguageData>
