--- a/Maiya Labeler 麦丫标签机/Languages/English/Keyed/MaiyaLabeler_Keys.xml
+++ b/Maiya Labeler 麦丫标签机/Languages/English/Keyed/MaiyaLabeler_Keys.xml
@@ -43,4 +43,10 @@
 
 	<MaiyaLabeler_ConfigCustomDesc>Custom Description (AI Context):</MaiyaLabeler_ConfigCustomDesc>
 	<MaiyaLabeler_DescPrefix>Note</MaiyaLabeler_DescPrefix>
+
+	<MaiyaLabeler_ShowMainTab>Show Bottom Tab Button</MaiyaLabeler_ShowMainTab>
+
+	<MaiyaLabeler_Status_Toggle>Maiya Labeler: {0}</MaiyaLabeler_Status_Toggle>
+	<MaiyaLabeler_Status_On>ON</MaiyaLabeler_Status_On>
+	<MaiyaLabeler_Status_Off>OFF</MaiyaLabeler_Status_Off>
 </LanguageData>
