--- a/Maiya Labeler 麦丫标签机/Languages/Korean/Keyed/MaiyaLabeler_Keys.xml
+++ b/Maiya Labeler 麦丫标签机/Languages/Korean/Keyed/MaiyaLabeler_Keys.xml
@@ -43,4 +43,10 @@
 
 	<MaiyaLabeler_ConfigCustomDesc>사용자 지정 설명 (AI 컨텍스트):</MaiyaLabeler_ConfigCustomDesc>
 	<MaiyaLabeler_DescPrefix>비고</MaiyaLabeler_DescPrefix>
+
+	<MaiyaLabeler_ShowMainTab>하단 탭 버튼 표시</MaiyaLabeler_ShowMainTab>
+
+	<MaiyaLabeler_Status_Toggle>Maiya Labeler: {0}</MaiyaLabeler_Status_Toggle>
+	<MaiyaLabeler_Status_On>켜짐</MaiyaLabeler_Status_On>
+	<MaiyaLabeler_Status_Off>꺼짐</MaiyaLabeler_Status_Off>
 </LanguageData>
